// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Geolocation /> render should has error 1`] = `
<div
  className="geolocation"
>
  <h1
    className="header"
  >
    Refresh geolocation
  </h1>
  <button
    className="button"
    onClick={[Function]}
  >
    Get geolocation
  </button>
  <div
    className="error"
  >
    Error: 
    test error message
  </div>
</div>
`;

exports[`<Geolocation /> render should has forecast 1`] = `
<div
  className="geolocation"
>
  <h1
    className="header"
  >
    Refresh geolocation
  </h1>
  <button
    className="button"
    onClick={[Function]}
  >
    Get geolocation
  </button>
  <div
    className="city"
  >
    <div
      className="header"
    >
      <div
        className="city-name"
      >
        New York
      </div>
      <div
        className="temperature"
      >
        -22
         ℃
      </div>
      <img
        alt="Weather icon"
        src="https://openweathermap.org/img/wn/icon_code.png"
      />
    </div>
    <div
      className="param"
    >
      <div
        className="name"
      >
        Wind
      </div>
      <div
        className="value"
      >
        15 m/s
      </div>
    </div>
    <div
      className="param"
    >
      <div
        className="name"
      >
        Cloudness
      </div>
      <div
        className="value"
      >
        good to stay at home
      </div>
    </div>
    <div
      className="param"
    >
      <div
        className="name"
      >
        Pressure
      </div>
      <div
        className="value"
      >
        234 hPa
      </div>
    </div>
    <div
      className="param"
    >
      <div
        className="name"
      >
        Humidity
      </div>
      <div
        className="value"
      >
        1%
      </div>
    </div>
    <div
      className="param"
    >
      <div
        className="name"
      >
        Coords
      </div>
      <div
        className="value"
      >
        74, 89
      </div>
    </div>
  </div>
</div>
`;
